# cicd-python-eks

./: README.md
.github/workflows/: cicd_pipeline.yml
bootstrap_terraform/: main.tf
post_terraform/: aws-auth.tf  cicd_cluster_role.tf  ecr_secret.tf  providers.tf
post_terraform/eks_oidc/: alb_controller.tf  iam_role_policies.tf  oidc_provider.tf  service_account.tf
post_terraform/github_oidc/: iam_role_policies.tf  oidc_provider.tf
python_app/: Dockerfile  pyproject.toml
python_app/kubernetes_files/: app-deployment.yaml  app-ingress.yaml  app-service.yaml
python_app/src/: app.py
python_app/tests/: conftest.py  test_app.py
terraform/: backend.tf  locals.tf  main.tf  variables.tf
terraform/EKS/: cluster.tf  ecr_repo.tf  iam.tf  node_group.tf  security_group.tf
terraform/networking/: eip_natgw.tf  igw.tf  nat.tf  routes.tf  subnets.tf  vpc.tf
